--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-lazy-load-image-component": "^1.6.3",
     "axios": "^1.6.3",
     "next": "14.0.4",
     "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
